slider woorking fine

--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -2,10 +2,13 @@
 $orange: #f94811;
 $lime: #c3f631;
 // gradient
-$orange-gradient: linear-gradient(90deg, #fc4f05 13.66%, #fbc400 88.29%);
-$lime-gradient: linear-gradient(90.08deg, #b9ea1d 0.07%, #fbc401 99.93%);
+$orange-yellow-gradient: linear-gradient(90deg, #fc4f05 13.66%, #fbc400 88.29%);
+$lime-yello-gradient: linear-gradient(90.08deg, #b9ea1d 0.07%, #fbc401 99.93%);
+$orange-gradient: #ff4d00;
+$yellow-gradient: #fbc400;
 // black
 $black-900: #1b1b1b;
+$black-800: #232323;
 $black-700: #333333;
 $black-600: #353535;
 $black-400: #535353;
