--- a/styles/Gallary.module.scss
+++ b/styles/Gallary.module.scss
@@ -86,6 +86,7 @@
   justify-content: center;
   align-items: center;
   font-family: $Assamese;
+  padding-bottom: 3rem;
   .title {
     margin-top: 1.8rem;
     padding: 1.8rem;
@@ -99,14 +100,20 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     // color: #ff6a3a;
-    font-size: 2.81rem;
+    font-size: min(2.81rem);
     font-weight: 500;
   }
   .credit {
     margin-top: 1rem;
     font-weight: 500;
-    font-size: 1.25rem;
+    font-size: 1.5rem;
     margin-bottom: 1rem;
     color: #fff;
+  }
+  .semester {
+    margin-top: 0.3rem;
+    font-weight: 400;
+    color: #fff;
+    font-style: italic;
   }
 }
