aversilty media links animation

--- a/styles/Gallary.module.scss
+++ b/styles/Gallary.module.scss
@@ -93,7 +93,8 @@
     display: inline-block;
   }
 }
-.info {
+.info,
+.info__19 {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -129,18 +130,39 @@
     color: #fff;
     font-style: italic;
   }
-  .instagram-link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-decoration: none;
-    color: #fff;
-    font-weight: 500;
-    :hover {
-      cursor: pointer;
+}
+.info__19 {
+  // border: 1px solid red;
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+  margin: 0;
+  .company__social {
+    margin-top: 5rem;
+    padding-bottom: 3rem;
+    .website {
+      margin-bottom: 2rem;
+      display: flex;
+      align-items: center;
+      a {
+        margin-left: 0.3rem;
+        text-decoration: none;
+        color: #fff;
+      }
     }
-    p {
-      margin-left: 0.3rem;
+    .instagram-link {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-decoration: none;
+      color: #fff;
+      font-weight: 500;
+      :hover {
+        cursor: pointer;
+      }
+      p {
+        margin-left: 0.3rem;
+      }
     }
   }
 }
